@@ -326,8 +326,12 @@ main(int argc, char** argv)
 	FILE* const    out_fd = stdout;
 	SerdEnv* const env    = serd_env_new(base);
 
-	SerdWriter* const writer = serd_writer_new(
-	    output_syntax, output_style, env, &base_uri, serd_file_sink, out_fd);
+	SerdWriter* writer = serd_writer_new(output_syntax,
+	                                     output_style,
+	                                     env,
+	                                     &base_uri,
+	                                     (SerdWriteFunc)fwrite,
+	                                     out_fd);
 
 	SerdReader* const reader = serd_reader_new(
 		input_syntax, writer, NULL,
@@ -354,7 +358,7 @@ main(int argc, char** argv)
 	} else {
 		st = serd_reader_start_stream(
 			reader,
-			bulk_read ? (SerdSource)fread : serd_file_read_byte,
+			bulk_read ? (SerdReadFunc)fread : serd_file_read_byte,
 			(SerdStreamErrorFunc)ferror,
 			in_fd,
 			in_name,
