@@ -89,7 +89,7 @@ test_read_chunks(void)
 	assert(f);
 
 	SerdStatus st = serd_reader_start_stream(reader,
-	                                         (SerdSource)fread,
+	                                         (SerdReadFunc)fread,
 	                                         (SerdStreamErrorFunc)ferror,
 	                                         f,
 	                                         NULL,
@@ -168,7 +168,7 @@ test_writer(const char* const path)
 	assert(fd);
 
 	SerdWriter* writer = serd_writer_new(
-		SERD_TURTLE, (SerdStyle)0, env, NULL, serd_file_sink, fd);
+		SERD_TURTLE, (SerdStyle)0, env, NULL, (SerdWriteFunc)fwrite, fd);
 	assert(writer);
 
 	serd_writer_chop_blank_prefix(writer, "tmp");
@@ -305,7 +305,7 @@ test_reader(const char* path)
 		fseek(temp, 0L, SEEK_SET);
 
 		serd_reader_start_stream(reader,
-		                         (SerdSource)fread,
+		                         (SerdReadFunc)fread,
 		                         (SerdStreamErrorFunc)ferror,
 		                         temp,
 		                         NULL,
@@ -323,7 +323,7 @@ test_reader(const char* path)
 	{
 		size_t n_reads = 0;
 		serd_reader_start_stream(reader,
-		                         (SerdSource)eof_test_read,
+		                         (SerdReadFunc)eof_test_read,
 		                         (SerdStreamErrorFunc)eof_test_error,
 		                         &n_reads,
 		                         NULL,
